@@ -4,16 +4,19 @@ import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import lombok.AllArgsConstructor;
+import lombok.Builder;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import lombok.AllArgsConstructor;
+
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
 @Data
 @AllArgsConstructor
+@Builder
 @NoArgsConstructor
 public class UsuarioPrincipal implements UserDetails {
 	/**
@@ -24,21 +27,23 @@ public class UsuarioPrincipal implements UserDetails {
 	private String nombre;
 	private String password;
 	private Long id;
+	private Long empresaId;
 	private Collection<? extends GrantedAuthority> authorities;
 
 	public static UsuarioPrincipal build(Usuario usuario) {
 
 		List<GrantedAuthority> authorities = usuario.getRoles().stream()
-				.map(rol -> new SimpleGrantedAuthority(rol
+				.map(rol -> (GrantedAuthority) new SimpleGrantedAuthority(rol
 						.getRolNombre().name()))
-				.collect(Collectors.toList());
+				.toList();
 
-		return new UsuarioPrincipal(
-				usuario.getNumero(),
-				usuario.getNombreEmpleado(),
-				usuario.getPassword(),
-				usuario.getId(),
-				authorities);
+		return UsuarioPrincipal.builder()
+				.numero(usuario.getNumero())
+				.nombre(usuario.getNombreEmpleado())
+				.password(usuario.getPassword())
+				.id(usuario.getId())
+				.authorities(authorities)
+				.build();
 	}
 
 	@Override
